style fix: tiny bit of space on right and left of text on small windows / phones

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-	max-width: 69em;
-	margin: 1em auto;
+	width: 70em;
+	margin: 0 auto;
+	padding: .5em;
 	color: #333;
 }
 
